# spl-rs

./: Cargo.toml  README.md
src/: _fsmc.rs  _i2s.rs  adc.rs  base.rs  bkp.rs  can.rs  crc.rs  dac.rs  dbgmcu.rs  deinit.rs  dma.rs  exti.rs  flash.rs  gpio.rs  i2c.rs  iwdg.rs  lib.rs  prelude.rs  rcc.rs  rtc.rs  sdio.rs  spi.rs  tim.rs  tim_old.rs  usart.rs  wwdg.rs
src/control/: _fsmc.rs  adc.rs  bkp.rs  can.rs  dma.rs  i2c.rs  iwdg.rs  rtc.rs  sdio.rs  spii2s.rs  tim.rs  usart.rs  wwdg.rs
