[package]
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
categories = ["embedded-hal", "hardware-support", "no-std"]
edition = "2018"
name = "spl"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.2"

[dependencies.stm32f1xx-hal]
git = "https://github.com/burrbull/stm32f1xx-hal"
optional = true

[features]
default = ["stm32f103"]
stm32f103 = ["stm32f1", "stm32f1xx-hal/stm32f103"]
stm32f1 = ["stm32"]
stm32 = []
