[package]
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
categories = ["embedded-hal", "hardware-support", "no-std"]
edition = "2018"
name = "spl"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.3"

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal/"
optional = true

[features]
default = ["stm32f103c8"]
stm32f103c8 = ["stm32f103", "adc1", "adc2", "dma1", "spi1", "spi2", "usart1", "usart2", "usart3", "tim1", "tim2", "tim3", "tim4", "i2c1", "i2c2", "gpioa", "gpiob", "gpioc", "gpiod", "gpioe", "afio", "can1", "wwdg", "iwdg"]
stm32f103 = ["stm32f1", "stm32f1xx-hal/stm32f103"]
stm32f1 = ["stm32"]
stm32 = []
adc = []
adc1 = ["adc"]
adc2 = ["adc"]
adc3 = ["adc"]
dma = []
dma1 = ["dma"]
dma2 = ["dma"]
spi = []
spi1 = ["spi"]
spi2 = ["spi"]
spi3 = ["spi"]
usart = []
usart1 = ["usart"]
usart2 = ["usart"]
usart3 = ["usart"]
uart = []
uart4 = ["uart"]
uart5 = ["uart"]
timer = []
tim-advanced = ["timer"]
tim1 = ["tim-advanced"]
tim8 = ["tim-advanced"]
tim-general = ["timer"]
tim2 = ["tim-general"]
tim3 = ["tim-general"]
tim4 = ["tim-general"]
tim5 = ["tim-general"]
tim-basic = ["timer"]
tim6 = ["tim-basic"]
tim7 = ["tim-basic"]
i2c = []
i2c1 = ["i2c"]
i2c2 = ["i2c"]
gpio = []
gpioa = ["gpio"]
gpiob = ["gpio"]
gpioc = ["gpio"]
gpiod = ["gpio"]
gpioe = ["gpio"]
gpiof = ["gpio"]
gpiog = ["gpio"]
afio = []
dac = []
can = []
can1 = ["can"]
iwdg = []
wwdg = []
